--- a/package.json
+++ b/package.json
@@ -1,70 +1,56 @@
 {
-  "name": "todo-by-vue-webpack",
+  "name": "todo-pro-by-vue",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "todo-pro-by-vue - imooc.com",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build:client": "cross-env NODE_ENV=production webpack --config ./build/webpack.config.client.js",
-    "build": "npm run clean && npm run build:client",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./build/webpack.config.client.js",
-    "clean": "rimraf dist",
-    "lint": "eslint --ext .js --ext .jsx --ext .vue client"
+    "server": "cross-env NODE_ENV=development webpack-dev-server --config ./build/webpack.config.client.js",
+    "lint": "eslint --ext .js --ext .jsx --ext .vue client",
+    "dev": "cross-env NODE_ENV=development webpack --config ./build/webpack.config.client.js",
+    "prod": "cross-env NODE_ENV=production webpack --config ./build/webpack.config.client.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/imzyf/todo-by-vue-webpack.git"
+    "url": "git+https://github.com/imzyf/todo-pro-by-vue.git"
   },
-  "author": "",
+  "author": "Yifans_Z",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/imzyf/todo-by-vue-webpack/issues"
+    "url": "https://github.com/imzyf/todo-pro-by-vue/issues"
   },
-  "homepage": "https://github.com/imzyf/todo-by-vue-webpack#readme",
-  "dependencies": {
-    "vue": "2.5.13"
-  },
+  "homepage": "https://github.com/imzyf/todo-pro-by-vue#readme",
+  "dependencies": {},
   "devDependencies": {
-    "autoprefixer": "7.2.3",
-    "babel-core": "6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-helper-vue-jsx-merge-props": "2.0.3",
-    "babel-loader": "7.1.2",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-syntax-jsx": "6.18.0",
-    "babel-plugin-transform-vue-jsx": "3.5.0",
-    "babel-preset-env": "1.6.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "concurrently": "^3.5.1",
-    "cross-env": "5.1.3",
-    "css-loader": "0.28.7",
-    "eslint": "^4.16.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^4.0.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.6",
-    "html-webpack-plugin": "2.30.1",
-    "husky": "^0.14.3",
-    "memory-fs": "^0.4.1",
-    "nodemon": "^1.14.12",
-    "postcss-loader": "2.0.9",
-    "qiniu": "^7.1.2",
-    "rimraf": "^2.6.2",
-    "style-loader": "0.19.1",
-    "stylus": "0.54.5",
-    "stylus-loader": "3.0.1",
-    "url-loader": "0.6.2",
-    "vue": "2.5.13",
-    "vue-loader": "13.6.0",
-    "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "2.5.13",
-    "webpack": "3.10.0",
-    "webpack-dev-server": "2.9.7",
-    "webpack-merge": "^4.1.1"
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^6.0.3",
+    "css-loader": "^3.2.0",
+    "cssnano": "^4.1.10",
+    "eslint": "^6.6.0",
+    "eslint-loader": "^3.0.2",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "husky": "^3.0.9",
+    "memory-fs": "^0.5.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.13.0",
+    "nodemon": "^1.19.4",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
+    "url-loader": "^2.2.0",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.2",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-merge": "^4.2.2"
   }
 }
